--- a/src/scss/components/_blog-listing.scss
+++ b/src/scss/components/_blog-listing.scss
@@ -113,6 +113,8 @@
             font-family: $font;
             color: $white;
             margin-bottom: 15px;
+            text-decoration: none;
+            display: block;
         }
 
         color: $white;
