--- a/src/scss/components/_hero-wrapper.scss
+++ b/src/scss/components/_hero-wrapper.scss
@@ -271,4 +271,70 @@
         }
     } 
 
+    &.version-1{
+        padding: 10px;
+
+        @media (max-width: 767px) {
+            padding: 5px;
+        }
+
+        .hero-wrapper__content{
+            position: inherit;
+        }
+
+        .hero-wrapper__bg,
+        .hero-wrapper__content{
+            min-height: 617px;
+
+            @media (max-width: 992px) {
+                min-height: 595px;
+            }
+        }
+        
+        .hero-wrapper__bg{
+            width: 100%;
+            border-radius: 40px;
+
+            @media (max-width: 767px) {
+                border-radius: 20px;
+            }
+        }
+
+        .hero-wrapper__content{
+            max-height: 100%;
+            max-width: 1120px;
+
+            @media (max-width: 1200px) {
+                max-width: 95%;
+                margin: 0 auto;
+            }
+
+            .title_2{
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                margin-bottom: 0;
+
+                @media (max-width: 767px) {
+                    font-size: 40px;
+                    font-weight: 400;
+                    line-height: 50px;
+                    -webkit-line-clamp: 6;
+                }
+            }
+
+            p{
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+
+                @media (max-width: 767px) {
+                    -webkit-line-clamp: 6;
+                }
+            }
+        }
+    }
+
 }
