Working on About us UI

--- a/src/scss/components/_variables-&-common.scss
+++ b/src/scss/components/_variables-&-common.scss
@@ -6,7 +6,18 @@ $black_3:#0E0E0E;
 $black_4: #353535;
 $black_5: #3A3A3A;
 $black_6: #2E2E2E;
+$black_7: #232323;
 $blue: #0033FF;
+$fbbg:#0766FF;
+$linkdinbg:#0066C8;
+$instabg:linear-gradient(
+  45deg,
+  #feda75 0%,
+  #fa7e1e 25%,
+  #d62976 50%,
+  #962fbf 75%,
+  #4f5bd5 100%
+);
 
 
 
