--- a/src/scss/components/_hero-wrapper.scss
+++ b/src/scss/components/_hero-wrapper.scss
@@ -274,6 +274,12 @@
     &.version-1{
         padding: 10px;
 
+        
+
+    &.w-full{
+        padding-bottom: 100px;
+    }
+
         @media (max-width: 767px) {
             padding: 5px;
         }
@@ -294,6 +300,8 @@
         .hero-wrapper__bg{
             width: 100%;
             border-radius: 40px;
+            position: relative;
+            z-index: 7;
 
             @media (max-width: 767px) {
                 border-radius: 20px;
@@ -315,10 +323,10 @@
                 -webkit-box-orient: vertical;
                 overflow: hidden;
                 margin-bottom: 0;
+                font-weight: 400;
 
                 @media (max-width: 767px) {
                     font-size: 40px;
-                    font-weight: 400;
                     line-height: 50px;
                     -webkit-line-clamp: 6;
                 }
@@ -329,9 +337,11 @@
                 -webkit-line-clamp: 3;
                 -webkit-box-orient: vertical;
                 overflow: hidden;
+                max-width: 80%;
 
                 @media (max-width: 767px) {
                     -webkit-line-clamp: 6;
+                    max-width: 100%;
                 }
             }
         }
