--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1507,6 +1507,9 @@ footer .footer-main .footer-links__2 .links {
 .hero-wrapper.version-1 {
   padding: 10px;
 }
+.hero-wrapper.version-1.w-full {
+  padding-bottom: 100px;
+}
 @media (max-width: 767px) {
   .hero-wrapper.version-1 {
     padding: 5px;
@@ -1528,6 +1531,8 @@ footer .footer-main .footer-links__2 .links {
 .hero-wrapper.version-1 .hero-wrapper__bg {
   width: 100%;
   border-radius: 40px;
+  position: relative;
+  z-index: 7;
 }
 @media (max-width: 767px) {
   .hero-wrapper.version-1 .hero-wrapper__bg {
@@ -1550,11 +1555,11 @@ footer .footer-main .footer-links__2 .links {
   -webkit-box-orient: vertical;
   overflow: hidden;
   margin-bottom: 0;
+  font-weight: 400;
 }
 @media (max-width: 767px) {
   .hero-wrapper.version-1 .hero-wrapper__content .title_2 {
     font-size: 40px;
-    font-weight: 400;
     line-height: 50px;
     -webkit-line-clamp: 6;
   }
@@ -1564,10 +1569,12 @@ footer .footer-main .footer-links__2 .links {
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  max-width: 80%;
 }
 @media (max-width: 767px) {
   .hero-wrapper.version-1 .hero-wrapper__content p {
     -webkit-line-clamp: 6;
+    max-width: 100%;
   }
 }
 
@@ -2131,6 +2138,304 @@ footer .footer-main .footer-links__2 .links {
   .why-choose-us-wrapper .why-choose-us-wrapper__cta .btn-blue {
     margin-top: 15px;
   }
+}
+
+.aboutus-wrapper {
+  position: relative;
+  padding: 100px 0 0 0;
+}
+.aboutus-wrapper.w-full {
+  margin-bottom: 100px;
+}
+@media (max-width: 767px) {
+  .aboutus-wrapper.w-full {
+    margin-bottom: 70px;
+  }
+}
+.aboutus-wrapper__bgline {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 49%;
+  z-index: 1;
+  margin-top: -380px;
+}
+@media (max-width: 1500px) {
+  .aboutus-wrapper__bgline {
+    margin-top: -350px;
+  }
+}
+@media (max-width: 1400px) {
+  .aboutus-wrapper__bgline {
+    margin-top: -310px;
+  }
+}
+@media (max-width: 1300px) {
+  .aboutus-wrapper__bgline {
+    margin-top: -300px;
+  }
+}
+@media (max-width: 1200px) {
+  .aboutus-wrapper__bgline {
+    margin-top: -260px;
+  }
+}
+@media (max-width: 991px) {
+  .aboutus-wrapper__bgline {
+    display: none;
+  }
+}
+.aboutus-wrapper .d-grid {
+  grid-template-columns: repeat(2, 1fr);
+  gap: 22px;
+  max-width: 1200px;
+  margin: 0 auto;
+  z-index: 7;
+  position: relative;
+}
+@media (max-width: 991px) {
+  .aboutus-wrapper .d-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.aboutus-wrapper .d-grid .small-title {
+  margin-bottom: 40px;
+}
+.aboutus-wrapper .d-grid p {
+  font-size: 18px;
+  font-weight: 200;
+  font-family: "Nohemi";
+  color: #ffffff;
+  line-height: 35px;
+}
+@media (max-width: 991px) {
+  .aboutus-wrapper .d-grid p {
+    font-size: 16px;
+    line-height: 30px;
+  }
+}
+.aboutus-wrapper .d-grid p:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.aboutus-square-wrapper {
+  max-width: 1200px;
+  margin: 100px auto;
+  z-index: 7;
+  position: relative;
+}
+@media (max-width: 767px) {
+  .aboutus-square-wrapper {
+    margin: 70px auto;
+  }
+}
+.aboutus-square-wrapper .d-grid {
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+@media (max-width: 991px) {
+  .aboutus-square-wrapper .d-grid {
+    gap: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .aboutus-square-wrapper .d-grid {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+  }
+  .aboutus-square-wrapper .d-grid .col:nth-child(1) {
+    order: 2;
+  }
+  .aboutus-square-wrapper .d-grid .col:nth-child(2) {
+    order: 1;
+  }
+}
+.aboutus-square-wrapper .d-grid .square-content__left,
+.aboutus-square-wrapper .d-grid .square-content__right {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+}
+@media (max-width: 991px) {
+  .aboutus-square-wrapper .d-grid .square-content__left,
+  .aboutus-square-wrapper .d-grid .square-content__right {
+    gap: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .aboutus-square-wrapper .d-grid .square-content__left,
+  .aboutus-square-wrapper .d-grid .square-content__right {
+    gap: 20px;
+  }
+  .aboutus-square-wrapper .d-grid .square-content__left .d-flex,
+  .aboutus-square-wrapper .d-grid .square-content__right .d-flex {
+    flex-direction: column-reverse;
+  }
+}
+@media (max-width: 767px) {
+  .aboutus-square-wrapper .d-grid .square-content__left .col-6:nth-child(1) {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+@media (max-width: 991px) {
+  .aboutus-square-wrapper .d-grid .square-content__img {
+    display: none;
+  }
+}
+.aboutus-square-wrapper .d-grid .square-content__right .d-flex .box-2 {
+  background-color: #ffffff;
+}
+.aboutus-square-wrapper .d-grid .square-content__right .d-flex .box-2 h3, .aboutus-square-wrapper .d-grid .square-content__right .d-flex .box-2 h5, .aboutus-square-wrapper .d-grid .square-content__right .d-flex .box-2 p {
+  color: #000000;
+}
+@media (min-width: 768px) {
+  .aboutus-square-wrapper .d-grid .d-flex {
+    gap: 20px;
+    display: grid !important;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 991px) {
+  .aboutus-square-wrapper .d-grid .d-flex {
+    gap: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .aboutus-square-wrapper .d-grid .d-flex {
+    gap: 20px;
+  }
+}
+.aboutus-square-wrapper .d-grid .d-flex .col-6 {
+  display: grid;
+  gap: 20px;
+  width: 100%;
+}
+@media (max-width: 991px) {
+  .aboutus-square-wrapper .d-grid .d-flex .col-6 {
+    gap: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .aboutus-square-wrapper .d-grid .d-flex .col-6 {
+    gap: 20px;
+  }
+}
+.aboutus-square-wrapper .d-grid .d-flex ul {
+  padding: 0;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin: 0;
+}
+@media (max-width: 991px) {
+  .aboutus-square-wrapper .d-grid .d-flex ul {
+    gap: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .aboutus-square-wrapper .d-grid .d-flex ul {
+    gap: 20px;
+  }
+}
+.aboutus-square-wrapper .d-grid .d-flex ul li a {
+  height: 95px;
+  width: 100%;
+  background-color: #232323;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+}
+.aboutus-square-wrapper .d-grid .d-flex ul li a img {
+  height: 27px;
+  width: auto;
+}
+.aboutus-square-wrapper .d-grid .d-flex ul li:nth-child(1) a:hover {
+  background-color: #0766FF;
+}
+@media (max-width: 991px) {
+  .aboutus-square-wrapper .d-grid .d-flex ul li:nth-child(1) a {
+    background-color: #0766FF;
+  }
+}
+.aboutus-square-wrapper .d-grid .d-flex ul li:nth-child(2) a:hover {
+  background-color: #000000;
+}
+@media (max-width: 991px) {
+  .aboutus-square-wrapper .d-grid .d-flex ul li:nth-child(2) a {
+    background-color: #000000;
+  }
+}
+.aboutus-square-wrapper .d-grid .d-flex ul li:nth-child(3) a:hover {
+  background-color: #0066C8;
+}
+@media (max-width: 991px) {
+  .aboutus-square-wrapper .d-grid .d-flex ul li:nth-child(3) a {
+    background-color: #0066C8;
+  }
+}
+.aboutus-square-wrapper .d-grid .d-flex ul li:nth-child(4) a:hover {
+  background: linear-gradient(45deg, #feda75 0%, #fa7e1e 25%, #d62976 50%, #962fbf 75%, #4f5bd5 100%);
+}
+@media (max-width: 991px) {
+  .aboutus-square-wrapper .d-grid .d-flex ul li:nth-child(4) a {
+    background: linear-gradient(45deg, #feda75 0%, #fa7e1e 25%, #d62976 50%, #962fbf 75%, #4f5bd5 100%);
+  }
+}
+.aboutus-square-wrapper .d-grid .d-flex .box-1,
+.aboutus-square-wrapper .d-grid .d-flex .box-2 {
+  padding: 25px 20px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.aboutus-square-wrapper .d-grid .d-flex .box-1 p,
+.aboutus-square-wrapper .d-grid .d-flex .box-2 p {
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 300;
+  font-family: "Nohemi";
+  margin-top: 10px;
+  margin-bottom: 0;
+  display: -webkit-box;
+  -webkit-line-clamp: 12;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.aboutus-square-wrapper .d-grid .d-flex .box-1 h5,
+.aboutus-square-wrapper .d-grid .d-flex .box-2 h5 {
+  margin-bottom: 0;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.aboutus-square-wrapper .d-grid .d-flex .box-1 {
+  background-color: #232323;
+}
+@media (min-width: 768px) {
+  .aboutus-square-wrapper .d-grid .d-flex .box-1 {
+    height: 210px;
+  }
+}
+.aboutus-square-wrapper .d-grid .d-flex .box-1 p {
+  margin-bottom: 0;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.aboutus-square-wrapper .d-grid .d-flex .box-1 h5 {
+  margin-bottom: 0;
+}
+.aboutus-square-wrapper .d-grid .d-flex .box-2 {
+  background-color: #0033FF;
+  height: 100%;
 }
 
 body {
