--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,8 @@
 @import "components/blog-listing";
 @import "components/testimonial-wrapper";
 @import "components/why-choose-us-wrapper";
+@import "components/aboutus-wrapper";
+@import "components/aboutus-square-wrapper";
 
 
 
