working on blog listing page

--- a/src/scss/components/_blog-listing.scss
+++ b/src/scss/components/_blog-listing.scss
@@ -133,5 +133,9 @@
         p:last-child{
             margin-bottom: 25px;
         }
+
+        p{
+            opacity: 0.6;
+        }
     }
 }
