--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,9 @@
 @import "components/why-choose-us-wrapper";
 @import "components/aboutus-wrapper";
 @import "components/aboutus-square-wrapper";
+@import "components/vision-mission-wrapper";
+@import "components/latest-blog-wrapper";
+@import "components/blog-category-wrappper";
 
 
 
