--- a/src/scss/components/_why-choose-us-wrapper.scss
+++ b/src/scss/components/_why-choose-us-wrapper.scss
@@ -1,5 +1,4 @@
 .why-choose-us-wrapper{
-    background: linear-gradient(180deg, #101010 0%, #000000 100%);
     padding: 20px 0 100px;
 
 
@@ -117,6 +116,134 @@
 
             @media (max-width:1100px) {
                 margin-top: 15px;
+            }
+        }
+    }
+
+    &.version-2{
+        margin-top: 150px;
+
+        @media (max-width:1200px) {
+            margin-top: 100px;
+        }
+
+        @media (max-width:767px) {
+            margin-top: 70px;
+            padding-bottom: 0;
+        }
+
+        .why-choose-us-wrapper__bgline{
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 49%;
+            margin-top: -250px;
+
+            @media (max-width:991px) {
+                display: none;
+            }
+        }
+
+
+        .d-grid{
+            gap: 30px;
+            position: relative;
+
+            @media (max-width:991px) {
+                display: block !important;
+            }
+
+            .col-1, .col-2{
+                width: 100%;
+                display: block;
+            }
+        }
+
+        p{
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+
+            @media (max-width:1200px) {
+                -webkit-line-clamp: 4;
+            }
+        }
+
+        .why-choose-us-wrapper__cta{
+            min-height: 635px;
+            height: 100%;
+
+            @media (max-width:1200px) {
+                min-height: 550px;
+            }
+
+            @media (max-width:991px) {
+                background-position: top !important;
+                margin-bottom: 70px;
+            }
+
+            @media (max-width:767px) {
+                min-height: 500px;
+            }
+        }
+
+        .why-choose-us-wrapper__content{
+            background: linear-gradient(222.32deg, #0033FF 2.29%, #000725 170.18%);
+            border-radius: 30px;
+            height: 100%;
+            padding: 40px 30px;
+
+            @media (max-width:767px) {
+                padding: 30px 20px;
+            }
+
+            h5{
+                margin-bottom: 40px;
+
+                @media (max-width:767px) {
+                    font-weight: 300;
+                    margin-bottom: 50px;
+                }
+            }
+        }
+
+        .content-items{
+            display: flex;
+            flex-direction: column;
+            gap: 85px;
+
+            @media (max-width:1200px) {
+                gap: 40px;
+            }
+
+            @media (max-width:767px) {
+                gap: 70px;
+            }   
+
+            .item-box{
+                .title{
+                    font-size: 35px;
+                    color: $white;
+                    font-weight: 400;
+                    font-family: $font;
+                    line-height: 45px;
+                    margin-bottom: 15px;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 1;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+
+                    @media (max-width:1200px) {
+                        -webkit-line-clamp: 2;
+                    }
+
+                    @media (max-width:767px) {
+                        font-size: 30px;
+                        -webkit-line-clamp: 3;
+                        margin-bottom: 20px;
+                    }
+                }
             }
         }
     }
