--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -6,6 +6,12 @@ footer{
         @media (max-width:1200px) {
             padding: 100px 0 21px;
         }
+
+        @media (max-width:767px) {
+            background: linear-gradient(178.88deg, #101010 10.79%, #0033FF 53.01%, #101010 99.04%);
+            padding: 300px 0 21px;
+            margin-top: -190px;
+        }
     
         h3{
             margin-bottom: 0;
@@ -69,7 +75,7 @@ footer{
             }
 
             @media (max-width:575px) {
-                padding: 30px 15px 450px 30px;
+                padding: 30px 15px 450px;
                 position: relative;
             }
         }
@@ -104,8 +110,8 @@ footer{
         &__address{
             padding: 30px 0;
             margin: 100px 0 0 60px;
-            border-top: 1px solid $white;
-            border-bottom: 1px solid $white;
+            border-top: 1px solid lch(100 0 0 / 0.3);
+            border-bottom: 1px solid lch(100 0 0 / 0.3);
             min-width: fit-content;
 
             @media (max-width:1200px) {
