--- a/src/scss/components/_hero-wrapper.scss
+++ b/src/scss/components/_hero-wrapper.scss
@@ -277,7 +277,11 @@
         
 
     &.w-full{
-        padding-bottom: 100px;
+        padding-bottom: 250px;
+
+        @media (max-width: 991px) {
+            padding-bottom: 170px;
+        }
     }
 
         @media (max-width: 767px) {
@@ -343,6 +347,35 @@
                     -webkit-line-clamp: 6;
                     max-width: 100%;
                 }
+            }
+        }
+
+        span, .tag{
+            font-size: 18px;
+            line-height: 20px;
+            font-family: $font;
+            font-weight: 300;
+        }
+
+        .banner-info{
+            color: $white;
+            opacity: .6;
+        }
+
+        span{
+            margin: 0 10px;
+        }
+
+        .tag{
+            background-color: $blue;
+            border-radius: 30px;
+            text-transform: uppercase;
+            color: $white;
+            margin: 60px 0 40px 0;
+            padding: 10px 15px;
+
+            @media (max-width: 767px) {
+                margin: 40px 0;
             }
         }
     }
