--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@
 @import "components/blog-detail-content";
 @import "components/contact-us";
 @import "components/faq-wrapper";
+@import "components/brand-guidelines-wrapper";
 
 
 
