--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -2,6 +2,7 @@ footer{
     .footer-contact{
         background: linear-gradient(178.99deg, #101010 7.64%, #0033FF 51.1%, #101010 99.13%);
         padding: 150px 0 21px;
+        position: relative;
 
         @media (max-width:1200px) {
             padding: 100px 0 21px;
@@ -274,6 +275,69 @@ footer{
                 }
                 100% {
                     transform: translateX(20%);
+                }
+            }
+        }
+
+
+        &.version-2{
+            @media (max-width:767px) {
+                padding: 200px 0 21px;
+                margin-top: -100px;
+            }
+
+            .footer-contact__content{
+                height: 689px;
+                padding: 70px 0;
+                background-position: top right !important;
+
+                @media (max-width:767px) {
+                    padding: 95px 15px 30px 15px;
+                    background-position: center !important;
+                    min-height: 689px;
+                    height: auto;
+                }
+
+                .container, .d-flex{
+                    height: 100%;
+                }
+
+                .d-flex{
+                    display: grid !important;
+                    grid-template-columns: repeat(2, 1fr);
+                    gap: 105px;
+                    max-width: 1420px;
+                    padding: 0 70px;
+                    margin: 0 auto;
+                    align-items: end;
+
+                    @media (max-width:1200px) {
+                        padding: 0 30px;
+                    }
+
+                    @media (max-width:767px) {
+                        display: block !important;
+                        padding: 0;
+                    }
+
+                    .col-1, .col-2{
+                        width: 100%;
+                    }
+
+                    h4{
+                        line-height: 55px;
+
+                        @media (max-width:767px) {
+                            margin-bottom: 70px;
+                            line-height: 45px;
+                        }
+                    }
+                }
+
+                .footer-contact__form{
+                    .btn-blue{
+                        width: 100%;
+                    }
                 }
             }
         }
