--- a/src/scss/components/_why-choose-us-wrapper.scss
+++ b/src/scss/components/_why-choose-us-wrapper.scss
@@ -83,12 +83,15 @@
         padding: 30px;
 
         @media (max-width:1200px) {
-            min-height: 500px;
+            min-height: 530px;
+            height: 530px;
             padding: 20px;
+            background-position: top right !important;
         }
 
         @media (max-width:767px) {
-            min-height: 500px;
+            height: 500px;
+            min-height: auto;
         }
 
         h3{
@@ -102,12 +105,17 @@
         p{
             margin-top: 30px;
             margin-bottom: 0;
+            display: -webkit-box;
             -webkit-line-clamp: 4;
             -webkit-box-orient: vertical;
             overflow: hidden;
 
             @media (max-width:1100px) {
                 margin-top: 15px;
+            }
+
+            @media (max-width:767px) {
+                -webkit-line-clamp: 3;
             }
         }
 
