--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -431,6 +431,7 @@ header .navbar-toggler:not(.collapsed) .navbar-toggler-icon::after {
 footer .footer-contact {
   background: linear-gradient(178.99deg, #101010 7.64%, #0033FF 51.1%, #101010 99.13%);
   padding: 150px 0 21px;
+  position: relative;
 }
 @media (max-width: 1200px) {
   footer .footer-contact {
@@ -705,6 +706,63 @@ footer .footer-contact .marquee-container .footer-textanimated {
   100% {
     transform: translateX(20%);
   }
+}
+@media (max-width: 767px) {
+  footer .footer-contact.version-2 {
+    padding: 200px 0 21px;
+    margin-top: -100px;
+  }
+}
+footer .footer-contact.version-2 .footer-contact__content {
+  height: 689px;
+  padding: 70px 0;
+  background-position: top right !important;
+}
+@media (max-width: 767px) {
+  footer .footer-contact.version-2 .footer-contact__content {
+    padding: 95px 15px 30px 15px;
+    background-position: center !important;
+    min-height: 689px;
+    height: auto;
+  }
+}
+footer .footer-contact.version-2 .footer-contact__content .container, footer .footer-contact.version-2 .footer-contact__content .d-flex {
+  height: 100%;
+}
+footer .footer-contact.version-2 .footer-contact__content .d-flex {
+  display: grid !important;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 105px;
+  max-width: 1420px;
+  padding: 0 70px;
+  margin: 0 auto;
+  align-items: end;
+}
+@media (max-width: 1200px) {
+  footer .footer-contact.version-2 .footer-contact__content .d-flex {
+    padding: 0 30px;
+  }
+}
+@media (max-width: 767px) {
+  footer .footer-contact.version-2 .footer-contact__content .d-flex {
+    display: block !important;
+    padding: 0;
+  }
+}
+footer .footer-contact.version-2 .footer-contact__content .d-flex .col-1, footer .footer-contact.version-2 .footer-contact__content .d-flex .col-2 {
+  width: 100%;
+}
+footer .footer-contact.version-2 .footer-contact__content .d-flex h4 {
+  line-height: 55px;
+}
+@media (max-width: 767px) {
+  footer .footer-contact.version-2 .footer-contact__content .d-flex h4 {
+    margin-bottom: 70px;
+    line-height: 45px;
+  }
+}
+footer .footer-contact.version-2 .footer-contact__content .footer-contact__form .btn-blue {
+  width: 100%;
 }
 footer .footer-main {
   padding: 50px 0;
@@ -1270,7 +1328,7 @@ footer .footer-main .footer-links__2 .links {
     height: 700px;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .hero-wrapper video {
     border-radius: 20px;
   }
@@ -1546,7 +1604,7 @@ footer .footer-main .footer-links__2 .links {
   position: relative;
   z-index: 7;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .hero-wrapper.version-1 .hero-wrapper__bg {
     border-radius: 20px;
   }
@@ -1554,6 +1612,22 @@ footer .footer-main .footer-links__2 .links {
 .hero-wrapper.version-1 .hero-wrapper__content {
   max-height: 100%;
   max-width: 1085px;
+}
+.hero-wrapper.version-1 .hero-wrapper__content.justify-content-end {
+  padding-bottom: 40px;
+  align-items: flex-start;
+}
+.hero-wrapper.version-1 .hero-wrapper__content.justify-content-end h1, .hero-wrapper.version-1 .hero-wrapper__content.justify-content-end p {
+  text-align: left;
+  max-width: 100%;
+}
+@media (max-width: 991px) {
+  .hero-wrapper.version-1 .hero-wrapper__content.justify-content-end h1, .hero-wrapper.version-1 .hero-wrapper__content.justify-content-end p {
+    text-align: center;
+  }
+}
+.hero-wrapper.version-1 .hero-wrapper__content.justify-content-end p {
+  margin-bottom: 0;
 }
 @media (max-width: 1200px) {
   .hero-wrapper.version-1 .hero-wrapper__content {
@@ -2172,13 +2246,16 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 1200px) {
   .why-choose-us-wrapper .why-choose-us-wrapper__cta {
-    min-height: 500px;
+    min-height: 530px;
+    height: 530px;
     padding: 20px;
+    background-position: top right !important;
   }
 }
 @media (max-width: 767px) {
   .why-choose-us-wrapper .why-choose-us-wrapper__cta {
-    min-height: 500px;
+    height: 500px;
+    min-height: auto;
   }
 }
 .why-choose-us-wrapper .why-choose-us-wrapper__cta h3 {
@@ -2191,6 +2268,7 @@ footer .footer-main .footer-links__2 .links {
 .why-choose-us-wrapper .why-choose-us-wrapper__cta p {
   margin-top: 30px;
   margin-bottom: 0;
+  display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   overflow: hidden;
@@ -2198,6 +2276,11 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 1100px) {
   .why-choose-us-wrapper .why-choose-us-wrapper__cta p {
     margin-top: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .why-choose-us-wrapper .why-choose-us-wrapper__cta p {
+    -webkit-line-clamp: 3;
   }
 }
 .why-choose-us-wrapper .why-choose-us-wrapper__cta .btn-blue {
@@ -3504,6 +3587,138 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 991px) {
   .faq-wrapper__bgsvg {
     display: none;
+  }
+}
+
+.brand-guidelines-wrapper.top-gap {
+  margin-top: -170px;
+}
+@media (max-width: 991px) {
+  .brand-guidelines-wrapper.top-gap {
+    margin-top: -90px;
+  }
+}
+@media (max-width: 767px) {
+  .brand-guidelines-wrapper.top-gap {
+    position: relative;
+    z-index: 6;
+  }
+}
+.brand-guidelines-wrapper p {
+  font-size: 18px;
+  line-height: 35px;
+  font-weight: 200;
+  color: #ffffff;
+  font-family: "Nohemi";
+}
+.brand-guidelines-wrapper h3 {
+  margin-bottom: 0;
+}
+.brand-guidelines-wrapper .about-content {
+  display: flex;
+  gap: 22px;
+}
+@media (max-width: 767px) {
+  .brand-guidelines-wrapper .about-content {
+    flex-direction: column;
+    gap: 40px;
+  }
+}
+.brand-guidelines-wrapper .about-content h3 {
+  width: 45%;
+}
+@media (max-width: 767px) {
+  .brand-guidelines-wrapper .about-content h3 {
+    width: 100%;
+  }
+}
+.brand-guidelines-wrapper .about-content p {
+  width: 70%;
+  margin-bottom: 0;
+}
+@media (max-width: 767px) {
+  .brand-guidelines-wrapper .about-content p {
+    width: 100%;
+  }
+}
+.brand-guidelines-wrapper .points {
+  margin: 150px auto;
+}
+@media (max-width: 991px) {
+  .brand-guidelines-wrapper .points {
+    margin: 70px auto;
+  }
+}
+.brand-guidelines-wrapper .points-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px 100px;
+  margin-top: 50px;
+  grid-auto-flow: dense;
+}
+@media (max-width: 767px) {
+  .brand-guidelines-wrapper .points-list {
+    display: block;
+    margin-top: 40px;
+  }
+}
+.brand-guidelines-wrapper .points-list p {
+  margin-bottom: 0;
+  position: relative;
+  padding-left: 40px;
+}
+@media (max-width: 767px) {
+  .brand-guidelines-wrapper .points-list p:not(:first-child) {
+    margin-top: 30px;
+  }
+}
+.brand-guidelines-wrapper .points-list p img {
+  height: 25px;
+  width: 25px;
+  left: 0;
+  position: absolute;
+}
+.brand-guidelines-wrapper .brand-guidelines-media {
+  background: linear-gradient(0deg, #101010 13.95%, rgba(0, 51, 255, 0.7019607843) 52.68%, #101010 91.41%);
+  padding: 230px 0 0;
+  margin-top: -230px;
+}
+@media (max-width: 1200px) {
+  .brand-guidelines-wrapper .brand-guidelines-media {
+    padding: 180px 0 0;
+    margin-top: -180px;
+  }
+}
+@media (max-width: 767px) {
+  .brand-guidelines-wrapper .brand-guidelines-media {
+    padding: 125px 0 0;
+    margin-top: -90px;
+  }
+}
+.brand-guidelines-wrapper .brand-guidelines-media video {
+  max-width: 1420px;
+  max-height: 800px;
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 40px;
+}
+@media (max-width: 1500px) {
+  .brand-guidelines-wrapper .brand-guidelines-media video {
+    padding: 0 20px;
+  }
+}
+@media (max-width: 1400px) {
+  .brand-guidelines-wrapper .brand-guidelines-media video {
+    max-height: 600px;
+  }
+}
+@media (max-width: 767px) {
+  .brand-guidelines-wrapper .brand-guidelines-media video {
+    max-height: auto;
+    width: 100%;
+    padding: 0;
+    border-radius: 0;
   }
 }
 
