--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@
 @import "components/contact-us";
 @import "components/faq-wrapper";
 @import "components/brand-guidelines-wrapper";
+@import "components/career";
 
 
 
